network-policies/allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-internal
  namespace: secure-platform

spec:
  podSelector: {}

  ingress:
  - from:
    - podSelector: {}
